--- a/src/app/features/auth/reset-password/reset-password.component.html
+++ b/src/app/features/auth/reset-password/reset-password.component.html
@@ -1,7 +1,7 @@
 <div class="row m-0">
   <div class="d-none d-sm-block col-md-12 col-lg-8 pl-0">
     <div class="min-height">
-      <img src="../../../assets/images/image-login.png" alt="login-image" style="width: 100%;" />
+      <img src="../../../assets/images/image-login.jpg" alt="login-image" style="width: 100%;" />
     </div>
   </div>
   <div class="col-xs-12 col-md-6 col-lg-4 offset-lg-0 parent">
