--- a/src/app/features/auth/forgot-password/forgot-password.component.html
+++ b/src/app/features/auth/forgot-password/forgot-password.component.html
@@ -2,7 +2,7 @@
   <div class="row m-0">
     <div class="d-none d-sm-block col-md-12 col-lg-8 pl-0">
       <div class="min-height">
-        <img src="../../../assets/images/image-login.png" alt="construction-site-image" class="login-image" style="width: 100%;" />
+        <img src="../../../assets/images/image-login.jpg" alt="construction-site-image" class="login-image" style="width: 100%;" />
       </div>
     </div>
     <div class="col-xs-12 col-md-6 col-lg-4 offset-lg-0 parent">
