--- a/src/app/shared/dialogs/add-my-material-Bom/add-my-material-bom.component.html
+++ b/src/app/shared/dialogs/add-my-material-Bom/add-my-material-bom.component.html
@@ -18,9 +18,8 @@
         <div formArrayName="myMaterial" *ngFor="let myMaterial of addMyMaterial.get('myMaterial')['controls']; let i = index">
           <div class="row p-t-10" [formGroupName]="i">
             <div class="col-xs-2" [ngClass]="this.data ? 'col-xs-2' : 'col-xs-3 p-r-0'">
-              <mat-form-field class="width-90 mat-form-field-padding" style="padding-top: 3px;">
-                <mat-label>Material Name*</mat-label>
-                <textarea matInput formControlName="materialName" class="text-area-border"></textarea>
+              <mat-form-field class="border-input width-90">
+                <input type="text" placeholder="Material Name*" matInput formControlName="materialName" />
                 <small *ngIf="addMyMaterial.get('myMaterial')['controls'][i]['controls']['materialName'].errors?.maxlength" class="warning-color"
                   >maximun characters allowed is 300</small
                 >
