--- a/src/app/shared/dialogs/upload-image/upload-image.component.html
+++ b/src/app/shared/dialogs/upload-image/upload-image.component.html
@@ -88,7 +88,8 @@
       </div>
 
       <p class="text-center mb-0 mt-4">
-        <button class="btn save-button" [disabled]="!((documentList && documentList.length) || (prevDocumentList && prevDocumentList.length))" (click)="addImage()">Add</button>
+        <button class="btn save-button" [disabled]="!isEmptyImgList" (click)="addImage()">Add</button>
+        <!-- [disabled]="!((documentList && documentList.length) || (prevDocumentList && prevDocumentList.length))" -->
       </p>
     </div>
 
