--- a/src/assets/scss/pages/bom.scss
+++ b/src/assets/scss/pages/bom.scss
@@ -264,6 +264,7 @@ div.limited-character.bom {
 
 .default-image {
   height: 50px;
+  // box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 .red-border {
