--- a/src/app/features/app-dashboard/app-dashboard.component.html
+++ b/src/app/features/app-dashboard/app-dashboard.component.html
@@ -196,7 +196,7 @@
                 </div>
 
                 <!-- Current start-->
-                <div class="col-xs-6 col-md-2 p-l-25 p-r-0">
+                <div class="col-xs-6 col-md-2 p-r-0" [ngClass]="isMobile ? 'pl-0' : 'p-l-25' ">
                   <form [formGroup]="filterForm">
                     <mat-form-field class="border-select select-project width103Percent mat-form-field-flex-mm-padding">
                       <mat-label>Select Project</mat-label>
@@ -215,7 +215,7 @@
                   </form>
                 </div>
                 <div class="col-xs-6 col-md-3 p-r-0 customDatePicker"
-                  [ngClass]="isMobile ? 'pl-0 wdrpr-mb' : 'p-l-20 widthWrapper'">
+                  [ngClass]="isMobile ? 'pl-0 wdrpr-mb' : 'widthWrapper'">
                   <ngx-mat-drp class="border-input" (selectedDateRangeChanged)="updateRange($event)" [options]="options"
                     #dateRangePicker></ngx-mat-drp>
                 </div>
@@ -296,7 +296,7 @@
                         </div> -->
             </div>
           </div>
-          <div class="col-sm-12 col-md-3">
+          <div class="col-sm-12 col-md-3" [ngClass]="isMobile ? 'pr-0' : '' ">
             <div class="dashboard__right">
               <div class="project-tile cursor" [routerLink]="['/project-dashboard']">
                 <div class="project-tile__tile equal-height w-100 mb-4 stats px-3 py-3 d-flex align-items-center mr-3">
