--- a/src/app/features/po/initiate-po/po-project-material/po-project-material.component.html
+++ b/src/app/features/po/initiate-po/po-project-material/po-project-material.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="form">
   <div class="row" [ngClass]="isMobile ? 'm-podr1' : 'p-t-10' ">
-    <div class="col-xs-6 col-sm-4 p-t-10 border-input m-itm" [ngClass]="isMobile ? 'm-srch' : '' ">
+    <div class="col-xs-6 col-sm-4 p-t-10 border-input m-itm" [ngClass]="isMobile ? 'm-srch mt-1' : '' ">
       <mat-form-field class="input-search-padding-zero" [ngClass]="isMobile ? 'pl-0' : 'p-l-20' ">
         <input matInput placeholder="Search Material" type="search" [(ngModel)]="searchMaterial"
           [ngModelOptions]="{standalone: true}" />
@@ -9,7 +9,7 @@
         </button>
       </mat-form-field>
     </div>
-    <div class="col-xs-6 col-sm-4 text-right m-itm" [ngClass]="isMobile ? 'm-srch mtpd-2px' : '' ">
+    <div class="col-xs-6 col-sm-4 text-right m-itm" [ngClass]="isMobile ? 'm-srch pt-3px mt-1' : '' ">
       <mat-form-field class="border-select select-project">
         <mat-select formControlName="selectedProject" placeholder="Search project Name"
           (selectionChange)="choosenProject($event)">
@@ -29,7 +29,7 @@
         </mat-select>
       </mat-form-field>
     </div>
-    <div class="col-md-4 col-xs-12 text-right m-itm">
+    <div class="col-md-4 col-xs-12 text-right m-itm" [ngClass]="isMobile ? 'sm-btn1 mt-2 mb-1' : '' ">
       <span class="p-r-5">
         <span (click)="selectCurrency()"
           class="text-decoration-underline main-color font-size-vary-grn p-r-10 text-semi-bold cursor-pointer">Select
