--- a/src/app/features/po/initiate-po/po-supplier/po-supplier.component.html
+++ b/src/app/features/po/initiate-po/po-supplier/po-supplier.component.html
@@ -10,7 +10,7 @@
       </button>
     </mat-form-field>
   </div>
-  <div class="col-xs-12 col-md-6 text-right p-t-10 m-itm" [ngClass]="isMobile ? 'pt-0 pb-0 pl-0 pr-2' : '' ">
+  <div class="col-xs-12 col-md-6 text-right p-t-10 m-itm" [ngClass]="isMobile ? 'pt-0 pb-0 pl-0 pr-2 sm-btn1' : '' ">
     <!-- <span>
       <mat-form-field class="example-form-field border-input p-l-20 border-input p-r-20">
           <input matInput placeholder="Search Supplier" type="search" [(ngModel)]="searchText" [ngModelOptions]="{standalone: true}" />
@@ -40,9 +40,10 @@
       </button>
     </span>
   </div>
-  <div class="col-md-12 col-xs-6 p-b-20 text-right m-itm" *ngIf="poCurrency && poCurrency.exchangeCurrencyName != null"
-    [ngClass]="isMobile ? 'pt-4' : 'p-t-10' ">
-    <span class="base-currency p-l-5 p-r-5" [ngClass]="isMobile ? 'font-size12 mcrncy pt-2 pb-2' : 'p-t-10 p-b-10' ">
+  <div class="col-md-12 col-xs-6 text-right m-itm" *ngIf="poCurrency && poCurrency.exchangeCurrencyName != null"
+    [ngClass]="isMobile ? 'pt-3 pl-0 p-b-10' : 'p-t-10 p-b-20' ">
+    <span class="base-currency p-l-5 p-r-5"
+      [ngClass]="isMobile ? 'font-size10 mcrncy pt-2 pb-2 cntry' : 'p-t-10 p-b-10' ">
       <span class="font-size-vary-grn color-grey">
         <img width="25px" *ngIf="poCurrency.exchangeCurrencyFlag" [src]="poCurrency.exchangeCurrencyFlag" />
         {{ poCurrency.exchangeCurrencyName }}
