--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -27,7 +27,7 @@
           </button>
         </mat-form-field>
       </div>
-      <div class="text-right col-xs-5 create-po-btn p-r-20 p-t-10">
+      <div class="text-right col-xs-5 create-po-btn p-r-20 p-t-10" [ngClass]="isMobile ? 'sm-btn1' : '' ">
         <button mat-raised-button class="main-background-color main-button color-white demo-title"
           [routerLink]="['./initiate-po']" matTooltip="Issue P.O. to supplier without Request For Quotations">
           Create P.O.
