--- a/src/app/features/rfq-supplier-template/rfq-supplier-add-address/rfq-supplier-add-address.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-add-address/rfq-supplier-add-address.component.html
@@ -24,8 +24,10 @@
                 <mat-form-field class="border-input add-edit-user-form-modal">
                   <input matInput type="number" placeholder="Phone No" formControlName="contactNo" required />
                   <!-- <mat-error class="mat-error-add-edit-form-modal">contactNo is Required</mat-error> -->
-                  <small *ngIf="form.controls['contactNo'].hasError('required') && form.controls['contactNo'].touched" class="form-error-msg"> Phone No is required </small>
-                  <small *ngIf="form.controls['contactNo'].hasError('pattern') && form.controls['contactNo'].touched" class="form-error-msg"> Enter Valid Phone No</small>
+                  <small *ngIf="form.controls['contactNo'].hasError('required') && form.controls['contactNo'].touched"
+                    class="form-error-msg"> Phone No is required </small>
+                  <small *ngIf="form.controls['contactNo'].hasError('pattern') && form.controls['contactNo'].touched"
+                    class="form-error-msg"> Enter Valid Phone No</small>
                 </mat-form-field>
               </div>
             </div>
@@ -37,8 +39,10 @@
                 <mat-form-field class="border-input add-edit-user-form-modal">
                   <input matInput type="text" placeholder="Email Id" formControlName="email" required />
                   <!-- <mat-error class="mat-error-add-edit-form-modal">Email Id is Required</mat-error> -->
-                  <small *ngIf="form.controls['email'].hasError('required') && form.controls['email'].touched" class="form-error-msg"> Email is required </small>
-                  <small *ngIf="form.controls['email'].hasError('pattern') && form.controls['email'].touched" class="form-error-msg"> Enter Valid Email</small>
+                  <small *ngIf="form.controls['email'].hasError('required') && form.controls['email'].touched"
+                    class="form-error-msg"> Email is required </small>
+                  <small *ngIf="form.controls['email'].hasError('pattern') && form.controls['email'].touched"
+                    class="form-error-msg"> Enter Valid Email</small>
                 </mat-form-field>
               </div>
 
@@ -47,14 +51,17 @@
                   <mat-form-field class="border-input add-edit-user-form-modal">
                     <input matInput type="text" placeholder="GST No" formControlName="gstNo" required />
                     <!-- <mat-error class="mat-error-add-edit-form-modal">contactNo is Required</mat-error> -->
-                    <small *ngIf="form.controls['gstNo'].hasError('required') && form.controls['gstNo'].touched" class="form-error-msg"> GST No is required </small>
-                    <small *ngIf="form.controls['gstNo'].hasError('pattern') && form.controls['gstNo'].touched" class="form-error-msg"> Enter Valid GST No</small>
+                    <small *ngIf="form.controls['gstNo'].hasError('required') && form.controls['gstNo'].touched"
+                      class="form-error-msg"> GST No is required </small>
+                    <small *ngIf="form.controls['gstNo'].hasError('pattern') && form.controls['gstNo'].touched"
+                      class="form-error-msg"> Enter Valid GST No</small>
                   </mat-form-field>
                 </ng-container>
                 <ng-template #noInt>
                   <mat-form-field class="border-input add-edit-user-form-modal">
                     <input matInput type="text" placeholder="GST No" formControlName="gstNo" />
-                    <small *ngIf="form.controls['gstNo'].hasError('pattern') && form.controls['gstNo'].touched" class="form-error-msg"> Enter Valid GST No</small>
+                    <small *ngIf="form.controls['gstNo'].hasError('pattern') && form.controls['gstNo'].touched"
+                      class="form-error-msg"> Enter Valid GST No</small>
                   </mat-form-field>
                 </ng-template>
               </div>
@@ -77,12 +84,16 @@
               <div class="col-sm-6">
                 <!-- PinCode -->
                 <mat-form-field class="border-input add-edit-user-form-modal">
-                  <input matInput type="text" placeholder="Address Line1" #FormaddressLine1 formControlName="addressLine1" required />
+                  <input matInput type="text" placeholder="Address Line1" #FormaddressLine1
+                    formControlName="addressLine1" required />
                   <!-- <mat-error class="mat-error-add-edit-form-modal">addressLine1 is Required</mat-error> -->
-                  <small *ngIf="form.controls['addressLine1'].hasError('required') && form.controls['addressLine1'].touched" class="form-error-msg">
+                  <small
+                    *ngIf="form.controls['addressLine1'].hasError('required') && form.controls['addressLine1'].touched"
+                    class="form-error-msg">
                     Address Line1 is required
                   </small>
-                  <small *ngIf="FormaddressLine1.value.length > 120 && form.controls['addressLine1'].touched" class="form-error-msg">
+                  <small *ngIf="FormaddressLine1.value.length > 120 && form.controls['addressLine1'].touched"
+                    class="form-error-msg">
                     Address should be less than 120 characters
                   </small>
                 </mat-form-field>
@@ -91,15 +102,18 @@
               <div class="col-sm-6">
                 <!-- PinCode -->
                 <mat-form-field class="border-input add-edit-user-form-modal">
-                  <input matInput type="text" placeholder="Address Line2" #FormaddressLine2 formControlName="addressLine2" />
+                  <input matInput type="text" placeholder="Address Line2" #FormaddressLine2
+                    formControlName="addressLine2" />
                   <!-- <mat-error class="mat-error-add-edit-form-modal">addressLine2 is Required</mat-error> -->
                   <!-- <small
                     *ngIf="form.controls['addressLine2'].hasError('required') && form.controls['addressLine2'].touched"
                     class="form-error-msg"> Address Line 2 is required </small> -->
-                  <small *ngIf="form.controls['addressLine2'].hasError('pattern') && form.controls['addressLine2'].touched" class="form-error-msg">
-                    Enter Valid Address Line 2</small
-                  >
-                  <small *ngIf="FormaddressLine2.value.length > 120 && form.controls['addressLine2'].touched" class="form-error-msg">
+                  <small
+                    *ngIf="form.controls['addressLine2'].hasError('pattern') && form.controls['addressLine2'].touched"
+                    class="form-error-msg">
+                    Enter Valid Address Line 2</small>
+                  <small *ngIf="FormaddressLine2.value.length > 120 && form.controls['addressLine2'].touched"
+                    class="form-error-msg">
                     Address should be less than 120 characters
                   </small>
                 </mat-form-field>
@@ -114,33 +128,27 @@
                 <mat-form-field class="border-select mat-form-field-flex-mm-padding w-100 pl-4 pr-4 ml-1">
                   <mat-select formControlName="countryCode" (selectionChange)="blankPincode()">
                     <div class="display-flex">
-                      <input
-                        class="p-l-10 p-b-5"
-                        matInput
-                        type="search"
-                        placeholder="Search Country"
-                        [(ngModel)]="searchCountry"
-                        [ngModelOptions]="{standalone: true}"
-                        (keydown)="$event.stopPropagation()"
-                      />
+                      <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search Country"
+                        [(ngModel)]="searchCountry" [ngModelOptions]="{standalone: true}"
+                        (keydown)="$event.stopPropagation()" />
                       <button mat-button matSuffix mat-icon-button>
                         <mat-icon>search</mat-icon>
                       </button>
                     </div>
                     <mat-select-trigger>
-                      <span matTooltip="{{ selectedCountry && selectedCountry.countryCode }} {{ selectedCountry && selectedCountry.callingCode }}"
-                        ><img class="w-30 p-r-4" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
+                      <span
+                        matTooltip="{{ selectedCountry && selectedCountry.countryCode }} {{ selectedCountry && selectedCountry.callingCode }}"><img
+                          class="w-30 p-r-4" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
                         <span class="p-r-5 font-size12">{{ selectedCountry && selectedCountry.name }}</span>
                         <!-- <span class="font-size12 text-semi-bold">{{ selectedCountry && selectedCountry.callingCode }}</span> -->
                       </span>
                     </mat-select-trigger>
                     <mat-option
                       *ngFor="let country of countryList | SearchPipe: searchCountry:['name', 'countryCode', 'callingCode']"
-                      [value]="country"
-                      selected="trade.isAttatched"
-                      ><span
-                        ><img class="width17Percent p-r-10" [src]="country.imageUrl" alt="" />
-                        <span matTooltip="{{ country.name }}" class="limited-character universal p-r-5">{{ country.name }}</span>
+                      [value]="country" selected="trade.isAttatched"><span><img class="width17Percent p-r-10"
+                          [src]="country.imageUrl" alt="" />
+                        <span matTooltip="{{ country.name }}"
+                          class="limited-character universal p-r-5">{{ country.name }}</span>
                         <span class="text-semi-bold color-grey">{{ country.callingCode }}</span>
                       </span>
                     </mat-option>
@@ -151,30 +159,12 @@
               <div class="col-sm-6">
                 <!-- PinCode -->
                 <mat-form-field class="border-input add-edit-user-form-modal">
-                  <input matInput type="text" placeholder="Pincode" #pincode formControlName="pinCode" (input)="getPincode($event)" required />
-                  <!-- <mat-error class="mat-error-add-edit-form-modal">pinCode is Required</mat-error> -->
-                  <small *ngIf="form.controls['pinCode'].hasError('required') && form.controls['pinCode'].touched" class="form-error-msg"> Pincode is required </small>
-                  <!-- <small *ngIf="form.controls['pinCode'].hasError('pattern') && form.controls['pinCode'].touched"
-                    class="form-error-msg"> Enter Valid pinCode</small> -->
-
-                  <!-- <small
-                    *ngIf="form.controls['pinCode'].touched && (!validPincode) && form.controls['pinCode'].hasError('pattern')"
-                    class="error-msg">
-                    Enter Valid Pincode
-                  </small>
-                  <small
-                    *ngIf="form.controls['pinCode'].touched && (!validPincode) && !form.controls['pinCode'].hasError('pattern') && !validPincode && (pincode.value.length > 0) "
-                    class="error-msg">
-                    Enter Valid Pincode
-                  </small> -->
-
+                  <input matInput type="text" placeholder="Pincode" #pincode formControlName="pinCode"
+                    (input)="getPincode($event)" required />
+                  <small *ngIf="form.controls['pinCode'].hasError('required') && form.controls['pinCode'].touched"
+                    class="form-error-msg"> Pincode is required </small>
                   <ng-container *ngIf="form.controls['pinCode'].touched">
-                    <small *ngIf="form.controls['pinCode'].hasError('required') && pincodeLength <= 0" class="form-error-msg p-l-15">
-                      Pincode is required
-                    </small>
-                    <!-- <small *ngIf="newAddressForm.controls['pinCode'].hasError('pattern') && newAddressForm.controls['pinCode'].touched"
-                                      class="form-error-msg p-l-15"> Enter Valid Pincode</small> -->
-                    <small *ngIf="!validPincode && pincodeLength > 0" class="error-msg p-l-15">
+                    <small *ngIf="!validPincode && pincodeLength > 0" class="error-msg">
                       Enter Valid Pincode
                     </small>
                   </ng-container>
@@ -189,8 +179,10 @@
                 <mat-form-field class="border-input add-edit-user-form-modal">
                   <input matInput type="text" placeholder="City" formControlName="city" required />
                   <!-- <mat-error class="mat-error-add-edit-form-modal">city is Required</mat-error> -->
-                  <small *ngIf="form.controls['city'].hasError('required') && form.controls['city'].touched" class="form-error-msg"> City is required </small>
-                  <small *ngIf="form.controls['city'].hasError('pattern') && form.controls['city'].touched" class="form-error-msg"> Enter Valid City</small>
+                  <small *ngIf="form.controls['city'].hasError('required') && form.controls['city'].touched"
+                    class="form-error-msg"> City is required </small>
+                  <small *ngIf="form.controls['city'].hasError('pattern') && form.controls['city'].touched"
+                    class="form-error-msg"> Enter Valid City</small>
                 </mat-form-field>
               </div>
 
@@ -199,8 +191,10 @@
                 <mat-form-field class="border-input add-edit-user-form-modal">
                   <input matInput type="text" placeholder="State" formControlName="state" required />
                   <!-- <mat-error class="mat-error-add-edit-form-modal">state is Required</mat-error> -->
-                  <small *ngIf="form.controls['state'].hasError('required') && form.controls['state'].touched" class="form-error-msg"> State is required </small>
-                  <small *ngIf="form.controls['state'].hasError('pattern') && form.controls['state'].touched" class="form-error-msg"> Enter Valid State</small>
+                  <small *ngIf="form.controls['state'].hasError('required') && form.controls['state'].touched"
+                    class="form-error-msg"> State is required </small>
+                  <small *ngIf="form.controls['state'].hasError('pattern') && form.controls['state'].touched"
+                    class="form-error-msg"> Enter Valid State</small>
                 </mat-form-field>
               </div>
               <div class="col-sm-6"></div>
@@ -212,12 +206,8 @@
 
           <div mat-dialog-actions>
             <div class="col-sm-12 save-btn-add-edit-user-modal rfq-bid-address">
-              <button
-                mat-raised-button
-                [disabled]="disabledAddress ? false : validPincode ? !form.valid : true"
-                (click)="saveAddress()"
-                class="main-background-color main-button color-white pull-right"
-              >
+              <button mat-raised-button [disabled]="disabledAddress ? false : validPincode ? !form.valid : true"
+                (click)="saveAddress()" class="main-background-color main-button color-white pull-right">
                 Submit
               </button>
             </div>
