--- a/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
@@ -8,7 +8,7 @@
       </button>
     </mat-form-field>
   </div>
-  <div class="col-md-6 col-xs-12 text-right m-itm" [ngClass]="isMobile ? 'pt-0 pb-0 pl-0 pr-2' : '' ">
+  <div class="col-md-6 col-xs-12 text-right m-itm" [ngClass]="isMobile ? 'pt-0 pb-0 pl-0 pr-2 sm-btn1' : '' ">
     <span (click)="selectCurrency()"
       class="text-decoration-underline main-color font-size-vary-grn p-r-10 text-semi-bold cursor-pointer">Select
       Currency</span>
@@ -29,7 +29,7 @@
         (click)="changeRfq()" type="button" [ngClass]="isMobile ? 'po-sm-btn' : '' ">Back</button>
     </span>
     <!-- (click)="navigateToUploadPage()" -->
-    <span>
+    <span class="xs-scrn-btn">
       <button mat-raised-button matStepperNext [disabled]="this.supplierCounter === 0" (click)="reviewRfq()"
         class="main-background-color main-button color-white" [ngClass]="isMobile ? 'po-sm-btn' : '' ">
         Next
