--- a/src/app/features/rfq/review/review.component.html
+++ b/src/app/features/rfq/review/review.component.html
@@ -4,7 +4,7 @@
       <div class="row m-b-10">
         <div class="col-md-12">
           <div class="row">
-            <div class="col-xs-12 p-t-10">
+            <div class="col-xs-12 p-t-10" [ngClass]="isMobile ? 'sm-btn1' : '' ">
               <button mat-raised-button class="main-background-color main-button color-white pull-right float-rfq-btn"
                 [disabled]="!form.valid">
                 Float RFQ
