--- a/src/app/features/users/user-details/user-details.component.html
+++ b/src/app/features/users/user-details/user-details.component.html
@@ -28,7 +28,7 @@
             </button>
           </mat-form-field>
         </div>
-        <div class="text-right col-xs-5 p-t-10 add-project-btn">
+        <div class="text-right col-xs-5 p-t-10 add-project-btn" [ngClass]="isMobile ? 'sm-btn1' : '' ">
           <!-- <button mat-raised-button class="main-background-color main-button color-white demo-title" (click)="addProject()">
           + Add Project
         </button> -->
