--- a/src/app/shared/dialogs/add-project/add-project-component.html
+++ b/src/app/shared/dialogs/add-project/add-project-component.html
@@ -262,7 +262,7 @@
     </div>
   </div>
   <div mat-dialog-actions>
-    <div class="col-sm-12 col-md-12 add-edit-dialog-button">
+    <div class="col-sm-12 col-md-12 add-edit-dialog-button" [ngClass]="isMobile ? 'sm-btn1' : '' ">
       <button mat-raised-button
         [disabled]="(!imageFileSize && localImg) ? true : (!form.valid || (!validPincode) || sameStartEndDate)"
         class="main-background-color main-button color-white">
