--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -862,3 +862,10 @@ mat-accordion {
 .material-info-padding.material-info {
   padding-top: 0px;
 }
+
+
+@media(max-width: 599px){
+  .mat-form-field-appearance-legacy .mat-form-field-suffix .mat-icon-button .mat-icon {
+    font-size: 20px !important;
+  }
+}
