--- a/src/app/features/global-store/global-store.component.html
+++ b/src/app/features/global-store/global-store.component.html
@@ -10,6 +10,9 @@
               Please add materials to continue.
             </p>
           </div>
+          <div>
+            <button mat-raised-button class="main-background-color main-button color-white" (click)="openBomDialog()">+Add Material</button>
+          </div>
           <!-- <button  mat-raised-button  (click)="addUser()" class="main-background-color main-button color-white">
                       Add First User
                     </button> -->
@@ -21,15 +24,13 @@
       <div class="row" *ngIf="materialDataLength > 0 || projectDataLength > 0">
         <div class="col-xs-8 col-md-6">
           <a href="javascript:void(0)" (click)="setButtonName('materialWise')">
-            <button [class.active]="buttonName == 'materialWise'" class="color-black actv-btn" mat-button
-              [ngClass]="isMobile ? 'pl-2 pr-2' : '' ">
+            <button [class.active]="buttonName == 'materialWise'" class="color-black actv-btn" mat-button [ngClass]="isMobile ? 'pl-2 pr-2' : ''">
               Material Wise
             </button>
           </a>
 
           <a href="javascript:void(0)" (click)="setButtonName('projectWise')">
-            <button [class.active]="buttonName == 'projectWise'" class="color-black actv-btn" mat-button
-              [ngClass]="isMobile ? 'pl-2 pr-2' : '' ">
+            <button [class.active]="buttonName == 'projectWise'" class="color-black actv-btn" mat-button [ngClass]="isMobile ? 'pl-2 pr-2' : ''">
               Project Wise
             </button>
           </a>
@@ -64,12 +65,10 @@
     </mat-card> -->
 
       <div *ngIf="buttonName === 'materialWise'; else elseBlock">
-        <app-material-wise (materialDataLength)="materialShowDataLength($event)" [materialData]="globalStoreData">
-        </app-material-wise>
+        <app-material-wise (materialDataLength)="materialShowDataLength($event)" [materialData]="globalStoreData"> </app-material-wise>
       </div>
       <ng-template #elseBlock>
-        <app-project-wise *ngIf="projectWiseData.length" (projectDataLength)="projectShowDataLength($event)"
-          [projectData]="projectWiseData"></app-project-wise>
+        <app-project-wise *ngIf="projectWiseData.length" (projectDataLength)="projectShowDataLength($event)" [projectData]="projectWiseData"></app-project-wise>
       </ng-template>
     </ng-container>
   </div>
