--- a/src/app/shared/dialogs/addGrn-viaExcel/addGrnViaExcel.component.html
+++ b/src/app/shared/dialogs/addGrn-viaExcel/addGrnViaExcel.component.html
@@ -7,7 +7,7 @@
 <div class="row">
   <div class="col-md-6 col-sm-12 padding-for-dialog-after-header text-align-center">
     <mat-card>
-      <a class="cursor-pointer" (click)="downloadExcel('assets/images/bom_template.xlsx')"> <img src="assets/images/download.svg" alt="download" class="width-35 mr-2" /></a>
+      <a class="cursor-pointer" (click)="downloadExcel()"> <img src="assets/images/download.svg" alt="download" class="width-35 mr-2" /></a>
       <mat-card-content class="m-t-10 main-color text-semi-bold fontsize-17-px">
         <p>
           Download the template
