--- a/src/app/shared/dialogs/add-my-material-Bom/add-my-material-bom.component.html
+++ b/src/app/shared/dialogs/add-my-material-Bom/add-my-material-bom.component.html
@@ -150,7 +150,7 @@
         </div>
       </div>
 
-      <div class="text-right col-xs-12 mt-4">
+      <div class="text-align-center col-xs-12 mt-4">
         <button class="btn btn-warning next-btn" [disabled]="!addMyMaterial.valid">Add Material</button>
       </div>
     </form>
