--- a/src/app/shared/dialogs/delete-my-material-confirmation/delete-myMaterial-confirmation.component.html
+++ b/src/app/shared/dialogs/delete-my-material-confirmation/delete-myMaterial-confirmation.component.html
@@ -5,7 +5,7 @@
   </button>
 </div>
 <div mat-dialog-content class="padding-for-dialog-after-header">
-  <p class="text-center">Are you sure you want to delete this Material?</p>
+  <p class="text-center">Are you sure you want to delete this material?</p>
 </div>
 
 <div mat-dialog-actions>
