--- a/src/app/features/global-store/global-store.component.html
+++ b/src/app/features/global-store/global-store.component.html
@@ -11,7 +11,7 @@
             </p>
           </div>
           <div>
-            <button mat-raised-button class="main-background-color main-button color-white" (click)="openBomDialog()">+Add Material</button>
+            <button mat-raised-button class="main-background-color main-button color-white" (click)="openBomDialog()">Add Material</button>
           </div>
           <!-- <button  mat-raised-button  (click)="addUser()" class="main-background-color main-button color-white">
                       Add First User
