--- a/src/app/shared/dialogs/addGrn-viaExcel/addGrnViaExcel.component.html
+++ b/src/app/shared/dialogs/addGrn-viaExcel/addGrnViaExcel.component.html
@@ -1,5 +1,5 @@
 <div class="header-add-edit-dialog">
-  <h1 mat-dialog-title class="light-grey">Direct GRN via excel</h1>
+  <h1 mat-dialog-title class="light-grey">Direct Receipt via excel</h1>
   <button type="button" class="close" (click)="cancel()" aria-label="Close">
     <span aria-hidden="true">×</span>
   </button>
