view bid - contractor & supplier images, supplier rating - not now button, css fixes

--- a/src/assets/scss/pages/po-card.component.scss
+++ b/src/assets/scss/pages/po-card.component.scss
@@ -85,6 +85,14 @@
         padding: 6px 30px;
         border-radius: 50px;
     }
+
+    .hollow-button {
+        background-color: #fff;
+        color: #f4783d;
+        padding: 6px 30px;
+        border-radius: 50px;
+        border: 1px solid #f4783d;
+    }
 }
 
 .orange-text{
