--- a/src/app/shared/dialogs/supplier-rating/supplier-rating.component.html
+++ b/src/app/shared/dialogs/supplier-rating/supplier-rating.component.html
@@ -29,6 +29,7 @@
       </div>
 
       <p class="text-center mb-0">
+        <button class="btn save-button hollow-button mr-3" (click)="closeDialog()">Not Now</button>
         <button class="btn save-button" (click)="ratingSubmission()">Save</button>
       </p>
     </div>
