--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -33,6 +33,8 @@
 @import "./pages/ngx-date.scss";
 @import "./pages/selectCurrency.scss";
 @import "./pages/subscriptions.scss";
+@import "./pages/advance-search.scss";
+
 
 
 ::ng-deep .mat-horizontal-stepper-header {
