--- a/src/app/features/dashboard/bom/bom-table/bom-table.component.html
+++ b/src/app/features/dashboard/bom/bom-table/bom-table.component.html
@@ -4,7 +4,7 @@
       [projectDetails]="projectData" [disableEditDelete]="true" pageType="2"></card-layout>
     <div class="row">
       <div class="col-xs-12 col-md-3">
-        <mat-form-field class="example-form-field border-input">
+        <mat-form-field class="bom-form-field border-input w-100">
           <input matInput placeholder="Search Materials" type="search" (keyup)="applyFilter($event)" />
           <button mat-button matSuffix mat-icon-button>
             <mat-icon>search</mat-icon>
