--- a/src/assets/scss/pages/bom.scss
+++ b/src/assets/scss/pages/bom.scss
@@ -36,7 +36,7 @@
   }
 }
 .bom-details-table-div-part {
-  max-height: 453px;
+  // max-height: 453px;
   overflow-y: auto;
   z-index: 0;
   position: relative;
